--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,16 @@
 			<artifactId>pagehelper-spring-boot-starter</artifactId>
 			<version>1.4.6</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
